修改版本号到1.2.0.RELEASE